minor bug fixes

--- a/templates/reviewlizer.html
+++ b/templates/reviewlizer.html
@@ -96,7 +96,7 @@
         <div class="col-lg-8">
           <br>
           <br>
-          <iframe style="width:100%; height:400px" src="{%static 'reviewlizer/reviewlizerPvalues.html'%}" title="plots" ></iframe>
+          <iframe style="width:100%; height: {{plotHeight0}}" src="{%static 'reviewlizer/reviewlizerPvalues.html'%}" title="plots" ></iframe>
           <iframe style="width:100%; height:1000px" src="{%static 'reviewlizer/reviewlizerBoxPlots.html'%}" title="plots" ></iframe>
         </div>
       </div>
