--- a/templates/instaSeer.html
+++ b/templates/instaSeer.html
@@ -68,7 +68,7 @@
         </div>
         <div class="col-lg-8">
 
-          <iframe class="table" src="{%static 'instaSeer/instaSeerDf2.html'%}" title="table" frameborder="0" scrolling="no" onload="resizeIframe(this)" style="width:100%"></iframe>
+          <iframe class="table" src="{%static 'instaSeer/instaSeerDf.html'%}" title="table" frameborder="0" scrolling="no" onload="resizeIframe(this)" style="width:100%"></iframe>
 
         </div>
       </div>
