minor bug fixes

--- a/templates/pgn.html
+++ b/templates/pgn.html
@@ -42,7 +42,7 @@
     <div class="container-fluid">
       <div class="row" id="row2">
           <p id='divTitle'>Graphics</p>
-          <iframe src="{%static 'graph.html'%}" width="100%" height="100%" id='graph'></iframe>
+          <iframe src="{%static 'pgn/graph.html'%}" width="100%" height="100%" id='graph'></iframe>
         </div>
       </div>
 
