--- a/templates/aboutit2.html
+++ b/templates/aboutit2.html
@@ -1327,7 +1327,7 @@
     <div class="row">
       <div class="col-sm-5" style="text-align: right">
         <h5>Gennaio 2020</h5>
-          <p>Iniziato ad imparare l'italian🇮🇹</p>
+          <p>Iniziato ad imparare l'italiano🇮🇹</p>
       </div>
       <div class="col-sm-2">
         <div class="row" style="height: 100%">
