--- a/templates/instaSeer.html
+++ b/templates/instaSeer.html
@@ -6,6 +6,9 @@
     {%load static%}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="{%static 'favicon.png'%}"/>
+    <script type="text/javascript">
+      document.getElementById('reload').src += '';
+    </script>
     <script>
       function resizeIframe(obj) {
         obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
@@ -84,7 +87,7 @@
         </div>
         <div class="col-lg-8">
 
-          <iframe class="table" src="{%static 'instaSeer/instaSeerDf.html'%}" title="table" frameborder="0" scrolling="no" onload="resizeIframe(this)" style="width:100%"></iframe>
+          <iframe id='reload' class="table" src="{%static 'instaSeer/instaSeerDf.html'%}" title="table" frameborder="0" scrolling="no" onload="resizeIframe(this)" style="width:100%"></iframe>
 
         </div>
       </div>
@@ -134,7 +137,7 @@ For that purpose, I took 2 samples with 300 records in each. The samples were ta
           </div>
 
         <div class="col-lg-8">
-            <iframe style="width: 100%; height: 400px;" src="{%static 'instaSeer/images/instaSeer_correlations.html'%}" title="" ></iframe>
+            <iframe id='reload' style="width: 100%; height: 400px;" src="{%static 'instaSeer/images/instaSeer_correlations.html'%}" title="" ></iframe>
 
         </div>
       </div>
@@ -151,7 +154,7 @@ The result of Kruskal_Wallis H-test showed that these two groups are stochastica
           </div>
 
         <div class="col-lg-8">
-            <iframe style="width: 100%; height: 400px;" src="{%static 'instaSeer/images/box.html'%}" title="" ></iframe>
+            <iframe id='reload' style="width: 100%; height: 400px;" src="{%static 'instaSeer/images/box.html'%}" title="" ></iframe>
         </div>
       </div>
 
@@ -171,7 +174,7 @@ The result of Kruskal_Wallis H-test showed that these two groups are stochastica
           <br>
           <br>
           <h5>Regression models</h5>
-          <!-- <iframe style="width:100%; height:400px" src="{%static 'instaSeer/reviewlizerPvalues.html'%}" title="plots" ></iframe> -->
+          <!-- <iframe id='reload' style="width:100%; height:400px" src="{%static 'instaSeer/reviewlizerPvalues.html'%}" title="plots" ></iframe> -->
           <table class="table table-hover table-sm">
             <thead>
               <tr>
@@ -217,7 +220,7 @@ The result of Kruskal_Wallis H-test showed that these two groups are stochastica
 
 
           <h5>Classification models</h5>
-          <!-- <iframe style="width:100%; height:400px" src="{%static 'instaSeer/reviewlizerPvalues.html'%}" title="plots" ></iframe> -->
+          <!-- <iframe id='reload' style="width:100%; height:400px" src="{%static 'instaSeer/reviewlizerPvalues.html'%}" title="plots" ></iframe> -->
           <table class="table table-hover table-sm">
             <thead>
               <tr>
@@ -281,7 +284,7 @@ The result of Kruskal_Wallis H-test showed that these two groups are stochastica
       </div>
 
     <div class="col-lg-8">
-        <iframe style="width: 100%; height: 400px;" src="{%static 'instaSeer/images/XGBoost Regressor Results.html'%}" title="" ></iframe>
+        <iframe id='reload' style="width: 100%; height: 400px;" src="{%static 'instaSeer/images/XGBoost Regressor Results.html'%}" title="" ></iframe>
     </div>
   </div>
 
@@ -304,8 +307,8 @@ As for the future work, I plan to increase number of records, fine tune neural n
           Histograms, barplots
         </div>
         <div class="col-lg-8">
-          <iframe style="width:100%; height:{{plotHeight1}}" src="{%static 'reviewlizer/reviewlizerHistograms.html'%}" title="plots" ></iframe>
-          <iframe style="width: 100%; height: {{plotHeight2}}" src="{%static 'reviewlizer/reviewlizerResult.html'%}" title="plots" ></iframe>
+          <iframe id='reload' style="width:100%; height:{{plotHeight1}}" src="{%static 'reviewlizer/reviewlizerHistograms.html'%}" title="plots" ></iframe>
+          <iframe id='reload' style="width: 100%; height: {{plotHeight2}}" src="{%static 'reviewlizer/reviewlizerResult.html'%}" title="plots" ></iframe>
         </div>
       </div> -->
 
