--- a/templates/miluogo.html
+++ b/templates/miluogo.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script type="text/javascript">
+      document.getElementById('reload').src += '';
+    </script>
     <script>
     $( function() {
       var minRent=$( "#minRent" ).val();
@@ -140,7 +143,7 @@ Then each apartment is assigned this score which helps to choose the best one. <
         </div>
         <div class="col-lg-8">
 
-          <iframe src="{%static 'updatedMap/map.html'%}" title="map" style="width: 100%; height: 800px;"></iframe>
+          <iframe id='reload' src="{%static 'updatedMap/map.html'%}" title="map" style="width: 100%; height: 800px;"></iframe>
 
         </div>
       </div>
