minor bug fixing

--- a/templates/reviewlyzer.html
+++ b/templates/reviewlyzer.html
@@ -125,7 +125,9 @@
 
 
     </div>
-
+  <script type="text/javascript">
+    document.getElementById('reload').src += '';
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   </body>
   <footer style="color:grey; position: relative; bottom:10px;left:10px;">
