--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="col" id='cell3' onclick="toggle_visibility('ovr');location.href='{%url 'cell3'%}'">
-          <a href="{%url 'home'%}" id="cellTitle"> Reviewlizer</a>
+          <a href="{%url 'home'%}" id="cellTitle"> Reviewlyzer</a>
           <p id="hint">Save your time and get assessment of the product based on YouTube reviews</p>
         </div>
 
@@ -91,7 +91,7 @@
     </div>
 
 
-    <div class="container-fluid">
+    <div class="shadow-lg container-fluid">
       <div class="row">
         <div class="col" id='cell7' onclick="toggle_visibility('ovr');location.href='{%url 'cell7'%}'">
           <a href="{%url 'cell7'%}" id="cellTitle">InstaSeer</a>
