--- a/templates/pgn.html
+++ b/templates/pgn.html
@@ -5,12 +5,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <title>Ilia Notin Projects | PGN Stats</title>
     {%load static%}
+
     <link rel="stylesheet" href="{%static 'ds.css'%}">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="{%static 'favicon.png'%}" type="image/x-icon">
     <script type="text/javascript">
-      document.getElementById('reload').src += '';
+      document.getElementById('reload').src = document.getElementById('reload').src
+      document.getElementById('reload').contentWindow.location.reload();
     </script>
   </head>
   <body>
@@ -62,7 +64,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
   <script type="text/javascript">
-    document.getElementById('reload').src += '';
+    document.getElementById('reload').src = document.getElementById('reload').src
+    document.getElementById('reload').contentWindow.location.reload();
   </script>
   <br>
   <footer style="position: fixed;font-size: 12px;bottom: 180px;left: -150px;color: grey;transform: rotate(-90deg);">
