--- a/templates/reviewlyzer.html
+++ b/templates/reviewlyzer.html
@@ -12,7 +12,8 @@
       }
     </script>
     <script type="text/javascript">
-      document.getElementById('reload').src += '';
+      document.getElementById('reload').src = document.getElementById('reload').src
+      document.getElementById('reload').contentWindow.location.reload();
     </script>
   </head>
   <script type="text/javascript">
@@ -88,7 +89,10 @@
 
 
           <iframe id='reload' src="{%static 'reviewlyzer/reviewlyzerDf.html'%}" title="table" frameborder="0" scrolling="no" onload="resizeIframe(this)" style="width:100%"></iframe>
-
+          <script type="text/javascript">
+            document.getElementById('reload').src = document.getElementById('reload').src
+            document.getElementById('reload').contentWindow.location.reload();
+          </script>
         </div>
       </div>
 
@@ -125,9 +129,10 @@
 
 
     </div>
-  <script type="text/javascript">
-    document.getElementById('reload').src += '';
-  </script>
+    <script type="text/javascript">
+      document.getElementById('reload').src = document.getElementById('reload').src
+      document.getElementById('reload').contentWindow.location.reload();
+    </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   </body>
   <footer style="color:grey; position: relative; bottom:10px;left:10px;">
