--- a/templates/instaSeer.html
+++ b/templates/instaSeer.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="{%static 'favicon.png'%}"/>
     <script type="text/javascript">
+      document.getElementById('reload').src+=''
       document.getElementById('reload').contentWindow.location.reload();
     </script>
     <script>
@@ -317,9 +318,10 @@ As for the future work, I plan to increase number of records, fine tune neural n
 
 
     </div>
-  <script type="text/javascript">
-    document.getElementById('reload').contentWindow.location.reload();
-  </script>
+    <script type="text/javascript">
+      document.getElementById('reload').src+=''
+      document.getElementById('reload').contentWindow.location.reload();
+    </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   </body>
   <footer style="color:grey; position: relative; bottom:10px;left:10px;">
