--- a/templates/miluogo.html
+++ b/templates/miluogo.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="{%static 'favicon.png'%}"/>
 
     <script type="text/javascript">
+      document.getElementById('reload').src+=''
       document.getElementById('reload').contentWindow.location.reload();
     </script>
 
@@ -145,9 +146,6 @@ Then each apartment is assigned this score which helps to choose the best one. <
         <div class="col-lg-8">
 
           <iframe id='reload' src="{%static 'updatedMap/map.html'%}" title="map" style="width: 100%; height: 800px;"></iframe>
-          <script type="text/javascript">
-            document.getElementById('reload').contentWindow.location.reload();
-          </script>
         </div>
       </div>
 
@@ -158,6 +156,10 @@ Then each apartment is assigned this score which helps to choose the best one. <
 
 
     </div>
+  <script type="text/javascript">
+    document.getElementById('reload').src+=''
+    document.getElementById('reload').contentWindow.location.reload();
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   </body>
   <footer style="color:grey; position: relative; bottom:10px;left:10px;">
