minor bug fixing

--- a/templates/miluogo.html
+++ b/templates/miluogo.html
@@ -73,11 +73,11 @@
 
           <p>Moving to another country is a real challenge. And one of the challenges is choosing a right place to live. As for me, some time ago I was moving to Milan, Italy. <br>
             That city is a vibrant multicultural megapolis with all its pros and cons. Therefore I have to choose an optimal place for living (an apartment to rent). I have identified several parameters for choosing one:
-proximity to employers: I will look for existing offers, find locations of the companies and calculate median location. Then I will assess the distance between each apartment and the median location.
-remoteness from disadvantaged areas. I will find locations of disadvantaged areas (based on reviews in the internet) and then calculate distance to the closest disadvantaged are for each apartment.
-vegetation concentration. I will calculate the amount of green areas per km2 for each of 9 zones (districts) in Milan and then define in what zones apartments are located.
-air quality. I will use information on air pollution for the last year and define mean scaled concentration of harmful substances and dust particles which monitoring stations provide. Then I will build a regression model that would predict that value based on location in the city.
-price (and location): I will take into account apartments of certain range (€1000 to €2000) which can be modified in the notebook. I will find existing offers and define their location. Then for each of the apartments I will assess the parameters above
+proximity to employers: I will look for existing offers, find locations of the companies and calculate median location. Then I assessed the distance between each apartment and the median location,
+remoteness from disadvantaged areas. I found locations of disadvantaged areas (based on reviews in the internet) and then calculate distance to the closest disadvantaged are for each apartment.
+vegetation concentration. I calculated the amount of green areas per sq.km for each of 9 zones (districts) in Milan and then define in what zones apartments are located.
+air quality. I used information on air pollution for the last year and define mean scaled concentration of harmful substances and dust particles which monitoring stations provide.
+Then I built a regression model that would predict that value based on location in the city. I will find existing offers and define their location. Then for each of the apartments I will assess the parameters above
 Based on those parameters I calculate the total score based on their weighted sum. Weight of each parameter can be based on priorities of a user (I used all equal).
 Then each apartment is assigned this score which helps to choose the best one. </p>
         </div>
