--- a/templates/reviewlyzer.html
+++ b/templates/reviewlyzer.html
@@ -51,7 +51,9 @@
             The tool that I am trying to implement here provides quantative assessment for features of products. <br>
             This app takes 15 videos from YouTube based on product names and provides <b>semantic analysis</b> of the captions based on the given keywords. <br>
             After that it returns <b>scores for each of the features</b> (key words) and <b>a total score</b> which helps to make the right choice.</p>
-            The process takes about <b>1-2 minutes</b>.
+            The process takes about <b>15-20 seconds</b> for each product.
+            <br>
+            If you see NaN scores, it means that YouTube is blocking the app:( Please try again later.
         </div>
         <div class="col-lg-8">
           <form class="input" action="{%url 'cell3'%}">
