Miluogo error handling

--- a/templates/miluogo.html
+++ b/templates/miluogo.html
@@ -112,6 +112,7 @@ Then each apartment is assigned this score which helps to choose the best one. <
           <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3" name='work_importance' value='{{given_work_importance}}'>
           <br>
           <br>
+          <p>{{given_message}}</p>
           <input type="submit" value="Find a great place!" onclick="toggle_visibility('spinn');toggle_visibility('spinn2');">
           <br>
           <br>
