--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <title>My DS projects</title>
+    <title>Ilia Notin Projects</title>
     {%load static%}
     <link rel="stylesheet" href="{%static 'ds.css'%}">
     <link rel="preconnect" href="https://fonts.gstatic.com">
